# alphafold-impact

./: .gitignore  README.md  pyproject.toml  requirements.txt
conf/: logging.yml
conf/base/: catalog.yml  catalog_globals.yml  globals.yml  parameters.yml  parameters_data_collection_gtr.yml  parameters_data_collection_nih_clinical_trials.yml  parameters_data_collection_oa.yml  parameters_data_enrichment_gtr.yml
notebooks/: clinicaltrialsgov.ipynb  exploration_gtr.ipynb  exploration_intent_chains.ipynb  exploration_wp1.ipynb  oa_concept_tagger.ipynb  plot_utils.py  reporting.ipynb  reporting_a.ipynb  reporting_b.ipynb  wp2_translational_ctc_tcc.ipynb
scripts/: 00_applied_lab.R  00_sb_lab.R  descriptive_stats.R  ecr.R  event_study_analysis.R  event_study_combined_plots.R  papers.R  quarterly_trends.R  reporting_plots.R  reporting_subtopics.R  summary_baseline_stats.R  summary_stats.R  utils.R
scripts/applied/: data_preprocessing.R  event_study_regressions.R  panel_regressions.R
scripts/applied_labs/: data_preprocessing.R  panel_regressions.R
scripts/ecr/: data_processing.R  panel_regressions.R  utils_figures.R  utils_tables.R
scripts/foundational/: data_preprocessing.R  event_study_regressions.R  panel_regressions.R
scripts/foundational_labs/: data_preprocessing.R  panel_regressions.R
scripts/labs_papers/: data_processing.R  panel_regressions.R
scripts/nonecr/: data_processing.R  panel_regressions.R  utils_figures.R  utils_tables.R
scripts/papers/: data_processing.R  panel_regressions.R  utils_figures.R  utils_tables.R
src/tests/: conftest.py
(+2077 files in other folders)
